bppackaging/src/objects/Part_Alternates__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Part_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alternate Part ID</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Alternates (Alternate Part ID)</relationshipLabel>
        <relationshipName>Part_Alternates1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Part ID</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Alternates</relationshipLabel>
        <relationshipName>Part_Alternates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced By</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Part Alternates</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAN-{0000000}</displayFormat>
        <label>Part Alternates Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Alternates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>